# finance-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.hermes-dev.yml  docker-compose.langfuse.yml  docker-compose.yml  pyproject.toml  renovate.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: c1b6c78ff858_initial_schema_transactions_categories_.py  f0493be25eec_seed_category_taxonomy.py
docker/: backup.sh
docker/hermes/: Modelfile  config.yaml
docker/litellm/: config.yaml
docs/: observability.md
docs/adr/: 0001-mcp-first-over-a2a.md  0002-integer-minor-units.md  0003-audit-log-in-transaction.md  0004-single-core-layer.md  0005-single-currency-trm-at-the-door.md  0006-deterministic-engine-narrating-ai.md  0007-server-rendered-ui-no-build-step.md  0008-recurring-base-latest-month.md  README.md  template.md
planning/: 01-revenue.md  02-ai-automation.md  03-remote-access.md  README.md
scripts/: patch_hermes_config.py  restore.sh
src/caudal/: __init__.py  config.py
src/caudal/core/: alerts.py  fx.py  projections.py  reporting.py  repository.py  tracing.py  validation.py
src/caudal/mcp_server/: server.py
src/caudal/scheduler/: jobs.py  notifier.py  runner.py
src/caudal/web/: app.py  charts.py  deps.py  routes.py
src/caudal/web/static/: app.css
src/caudal/web/templates/: base.html  budgets.html  projections.html  reports.html  transaction_form.html  transactions_list.html
src/finance_mcp/: __init__.py  config.py
src/finance_mcp/core/: alerts.py  db.py  fx.py  logging.py  models.py  projections.py  reporting.py  repository.py  tracing.py  validation.py
src/finance_mcp/mcp_server/: server.py
src/finance_mcp/scheduler/: jobs.py  notifier.py  runner.py
src/finance_mcp/web/: app.py  charts.py  deps.py  routes.py
src/finance_mcp/web/static/: app.css
src/finance_mcp/web/templates/: _macros.html  alerts.html  base.html  budgets.html  dashboard.html  history.html  projections.html  reports.html  transaction_form.html  transactions_list.html
tests/integration/: conftest.py  test_mcp_tools.py  test_migrations.py  test_reporting_and_alerts.py  test_repository.py  test_scheduler.py  test_web.py
tests/unit/: test_alerts.py  test_elicitation.py  test_fx.py  test_money_properties.py  test_notifier.py  test_projections.py  test_reporting.py  test_routes_helpers.py  test_scaffolding.py  test_tracing.py  test_validation.py
